--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,48 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  max-width: 425px;
+  width: 100%;
+
+  background-color: black;
+
+  margin: auto;
+}
+
+.App {
+  max-width: 100%;
+  height: 100vh;
+  width: 100%;
+  margin: auto;
+  -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
+  margin: auto;
+  position: relative;
+}
+
+.App::-webkit-scrollbar {
+  width: 4px;
+}
+
+.App::-webkit-scrollbar-thumb {
+  background: rgb(158, 158, 158);
+  border-radius: 3px;
+}
+
+.App::-webkit-scrollbar-track {
+  background: #f1f1f1 !important;
+}
+
+.MuiInput-underline:before,
+.MuiInput-underline::after {
+  border: none !important;
+}
+
+.MuiFilledInput-underline:before,
+.MuiFilledInput-underline:after {
+  border: none !important;
 }
