--- a/pages/dashboard/Dashboard.module.css
+++ b/pages/dashboard/Dashboard.module.css
@@ -18,10 +18,13 @@
           filter: blur(100px);
   -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
           transform: matrix(-1, 0, 0, 1, 0, 0);
+  z-index: -1;
 }
 
 .Dashboard_Content {
-  height: 100vh;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   width: 100%;
   background-color: #09121c;
   z-index: 111;
