--- a/Components/UI/PodcastMini/PodcastMini.module.scss
+++ b/Components/UI/PodcastMini/PodcastMini.module.scss
@@ -1,8 +1,12 @@
 .Container {
-  width: 147px;
-  height: 234px;
+  width: 130px !important;
+  height: 250px;
+  background-color: transparent !important;
 
+  box-shadow: unset !important;
   .PodcastImg {
+    pointer-events: none;
+
     width: 147px;
     height: 136px;
 
@@ -17,6 +21,58 @@
 
       width: 100%;
       height: 100%;
+    }
+  }
+
+  .Card_Content {
+    color: #ffffff;
+    .Title {
+      h3 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16px;
+      }
+    }
+
+    .Time {
+      p {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 150%;
+        /* identical to box height, or 18px */
+
+        color: #898f97;
+
+        margin-left: 10px;
+      }
+    }
+
+    .Author {
+      h6 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 150%;
+        /* identical to box height, or 18px */
+
+        color: #ffffff;
+
+        margin-left: 7px;
+
+        letter-spacing: 1px;
+      }
+
+      img {
+        width: 16px;
+        height: 16px;
+        object-fit: cover;
+        border-radius: 50px;
+      }
     }
   }
 }
